language-server/src/tests/snapshots/gleam_language_server__tests__completion__argument_variable_shadowing.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main(x: Int) {\n  let x = [1, 2]\n\n}\n"
---
pub fn main(x: Int) {
  let x = [1, 2]
|
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [3:0-3:0]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
main
  kind:   Function
  detail: fn(Int) -> List(Int)
  sort:   2_main
  desc:   app
  edits:
    [3:0-3:0]: "main"
x
  kind:   Variable
  detail: List(Int)
  sort:   2_x
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "x"
