language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_function_labels.snap
---
source: language-server/src/tests/completion.rs
expression: "\nfn wibble(wibble arg1: String, wobble arg2: String) {\n  arg1 <> arg2\n}\n\nfn fun() { // completion inside parens below includes labels\n  let wibble = wibble()\n}\n"
---
fn wibble(wibble arg1: String, wobble arg2: String) {
  arg1 <> arg2
}

fn fun() { // completion inside parens below includes labels
  let wibble = wibble(|)
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [6:22-6:22]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
fun
  kind:   Function
  detail: fn() -> String
  sort:   2_fun
  desc:   app
  edits:
    [6:22-6:22]: "fun"
wibble
  kind:   Function
  detail: fn(String, String) -> String
  sort:   2_wibble
  desc:   app
  edits:
    [6:22-6:22]: "wibble"
wibble:
  kind:   Field
  detail: String
  sort:   0_wibble:
wobble:
  kind:   Field
  detail: String
  sort:   0_wobble:
