language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_imported_function_labels.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport dep\n\nfn fun() { // completion inside parens below includes labels\n  let wibble = dep.wibble()\n}\n"
---
import dep

fn fun() { // completion inside parens below includes labels
  let wibble = dep.wibble(|)
}


----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [4:26-4:26]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
dep.wibble
  kind:   Function
  detail: fn(String, String) -> String
  sort:   3_dep.wibble
  desc:   app
  edits:
    [4:26-4:26]: "dep.wibble"
fun
  kind:   Function
  detail: fn() -> String
  sort:   2_fun
  desc:   app
  edits:
    [4:26-4:26]: "fun"
wibble:
  kind:   Field
  detail: String
  sort:   0_wibble:
wobble:
  kind:   Field
  detail: String
  sort:   0_wobble:
