language-server/src/tests/snapshots/gleam_language_server__tests__completion__importable_does_not_add_extra_new_line_if_imports_exist.snap
---
source: language-server/src/tests/completion.rs
expression: ""
---
----- Completion content -----
$return
  kind:   Keyword
  detail: Keyword
  sort:   4_$return
  edits:
    [3:0-3:0]: "$return"
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
dep.wobble
  kind:   Function
  detail: fn() -> Nil
  sort:   5_dep.wobble
  desc:   dep
  edits:
    [3:0-3:0]: "dep.wobble"
    [0:0-0:0]: "import dep\n"
